# framework.uifw.elementary

./: .gitignore  ChangeLog  INSTALL  NEWS  configure.ac  project.config
config/default/: base.src  base.src.in
config/desktop/: base.src
config/illume/: base.src
config/mobile/: base.src  base.src.in
config/mobile-2.2/: base.src
config/mobile-2.3/: base.src
config/standard/: base.src  base.src.in
doc/: examples.dox  index.doxy
doc/screenshots/: box_example_02.eps  bubble_example_01.eps  button_00.eps  check_example_01.eps  (+30 more)
mobile/: configure.ac
packaging/: elementary.manifest  elementary.spec
po/: LINGUAS  POTFILES.in  ar.po  az.po  bg.po  ca.po  cs.po  da.po  de.po  dt_fmt.po  el_GR.po  en.po  en_PH.po  en_US.po  es_ES.po  es_US.po  et.po  eu.po  fa.po  fi.po  fr.po  fr_CA.po  ga.po  gl.po  gu.po  he.po  hi.po  hr.po  hu.po  hy.po  id.po  is.po  it.po  it_IT.po  ja_JP.po  ka.po  kk.po  ko_KR.po  lt.po  lv.po  (+24 more)
src/modules/: Makefile.am
src/modules/ctxpopup_copypasteUI/: Makefile.am  cbhm_helper.c  copypaste.c
src/modules/datetime_input_button/: Makefile.am  datetime_input_button.c
src/modules/datetime_input_circle/: Makefile.am  datetime_input_circle.c
src/modules/datetime_input_ctxpopup/: datetime_input_ctxpopup.c
src/modules/datetime_input_layout/: datetime_input_layout.c
src/modules/datetime_input_popup/: datetime_input_popup.c
src/modules/datetime_input_spinner/: Makefile.am  datetime_input_spinner.c
src/modules/object_dump/: object_dump.c
src/modules/prefs/: elm_entry.c
src/modules/utility/: utility.c
wearable/: configure.ac
(+754 files in other folders)
