AUTOMAKE_OPTIONS     = 1.4 foreign
MAINTAINERCLEANFILES = Makefile.in

SUBDIRS = \
test_entry \
test_map \
test_map_engine \
access_output \
datetime_input_layout \
datetime_input_spinner \
datetime_input_popup \
datetime_input_ctxpopup \
datetime_input_button \
datetime_input_circle \
utility

SUBDIRS += ctxpopup_copypasteUI
